@@ -1,6 +1,6 @@
 Package: gap
 Version: 1.2.2
-Date: 2020-1-30
+Date: 2020-2-1
 Title: Genetic Analysis Package
 Author: Jing Hua Zhao and colleagues with inputs from Kurt Hornik and
         Brian Ripley
