@@ -89,10 +89,11 @@ circos.cis.vs.trans.plot \tab circos plot of cis/trans classification\cr
 circos.cnvplot    \tab      circos plot of CNVs\cr
 circos.mhtplot 	  \tab      circos Manhattan plot with gene annotation\cr
 cnvplot           \tab      genomewide plot of CNVs\cr
+makeRLEplot       \tab      make relative log expression plot\cr
 METAL_forestplot  \tab      forest plot as R/meta's forest for METAL outputs\cr
 mhtplot           \tab      Manhattan plot\cr
 mhtplot2          \tab      Manhattan plot with annotations\cr
-mhtplot2d         \tab      2D Manhattan plot
+mhtplot2d         \tab      2D Manhattan plot\cr
 mhtplot.trunc     \tab      truncated Manhattan plot\cr
 miamiplot         \tab      Miami plot (Experimental)\cr
 pedtodot          \tab      Converting pedigree(s) to dot file(s)\cr
