@@ -1,7 +1,10 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.2.2
-30-01-2020	Fix problem with inv_chr_pos_a1_a2(prefix=), return list from mhtplot2d
+01-02-2020	Fix problem with inv_chr_pos_a1_a2(prefix=), return values from mhtplot2d
+		Recompile R-devel with `CPPFLAGS="-D_FORTIFY_SOURCE=2 -fPIC" ./configure --enable-R-shlib'
+		as informed by Kurt Hornik <Kurt.Hornik@R-project.org>
+		and then add ignore.h for `R CMD check --as-cran`
 17-12-2019	Add chr_pos_a1_a2()/inv_chr_pos_a1_a2()
 11-12-2019	Add snptest_sample() to output in SNPTEST sample file format
 05-11-2019	Add makeRLEplot() from Caprion pilot data and function setup by Jimmy Peters
